--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>Portfolio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link href="styles.css" rel="stylesheet" type="text/css>"
     </head>
     <body>
         
