added background color

--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+
 <html>
     <head>
         <meta charset="utf-8">
@@ -13,6 +10,9 @@
         <link href="styles.css" rel="stylesheet" type="text/css>"
     </head>
     <body>
+    <div class="zac>"
+        <h1>ISAAC WACHIRA</h1>
+    </div>
         
         <script src="" async defer></script>
     </body>
