--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
         <link href="styles.css" rel="stylesheet" type="text/css>"
     </head>
     <body>
-    <div class="zac>"
         <h1>ISAAC WACHIRA</h1>
-    </div>
+        <p>Software developer</p>
+
+        <nav id="navbar">
+            <h2><a href="#home"></a></h2>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#qualifications">Qualifications</a></li>
+                <li><a href="#contacts">Contacts</a></li>
         
         <script src="" async defer></script>
     </body>
