--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="styles.css" rel="stylesheet" type="text/css>"
     </head>
-    <body>
+    <body id="home">
         <h1>ISAAC WACHIRA</h1>
         <p>Software developer</p>
 
