--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Portfolio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="styles.css" rel="stylesheet" type="text/css>"
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body id="home">
         <h1>ISAAC WACHIRA</h1>
