--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body id="home">
+        <!--navbar-->
         <h1>ISAAC WACHIRA</h1>
         <p>Software developer</p>
 
@@ -20,7 +21,18 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#qualifications">Qualifications</a></li>
                 <li><a href="#contacts">Contacts</a></li>
-        
+            </nav>
+            <!--showcase area-->
+            <header>
+
+            </header id="showcase">
+                <div class="showcase-content">
+                    <div class="container">
+                        <H1>Take your business website to the <br> <span class="text-primary">next level</span></H1>
+                        <a href="about" class="btn">FIND OUT HOW</a>
+                    </div>
+                </div>
+
         <script src="" async defer></script>
     </body>
 </html>
