added an about section

--- a/index.html
+++ b/index.html
@@ -23,16 +23,25 @@
                 <li><a href="#contacts">Contacts</a></li>
             </nav>
             <!--showcase area-->
-            <header>
-
-            </header id="showcase">
+            <header id="showcase">
                 <div class="showcase-content">
                     <div class="container">
                         <H1>Take your business website to the <br> <span class="text-primary">next level</span></H1>
                         <a href="about" class="btn">FIND OUT HOW</a>
                     </div>
                 </div>
-
+            </header>
+            <!--Section: About-->  
+            <section id="about">
+                <div class="container">
+                    <h2 class="about-heading">Get to know <span class="text-primary">Me</span></h2>
+                    <div class="about-content">
+                        <h3>A little bit <span class="text-primary">about myself</span></h3>
+                        <p class="lead">I am a software developer with impeccable skills in web design and programming</p>
+                        <p class="lead">Besides software development, I have a bachelors degree in business development. i am an excellent problem solver, and excell in almost every project thet I undertake!</p>
+                    </div>
+                </div>
+            </section>
         <script src="" async defer></script>
     </body>
 </html>
