--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                         <p class="lead">I am a software developer with impeccable skills in web design and programming</p>
                         <p class="lead">Besides software development, I have a bachelors degree in business development. i am an excellent problem solver, and excell in almost every project thet I undertake!</p>
                     </div>
+                    <div class="about-image">
+                        <img src="img/me.jpg" alt="my picture"
+                    </div>
                 </div>
             </section>
         <script src="" async defer></script>
