--- a/index.html
+++ b/index.html
@@ -36,12 +36,63 @@
                 <div class="container">
                     <h2 class="about-heading">Get to know <span class="text-primary">Me</span></h2>
                     <div class="about-content">
+                        <div class="about text">
                         <h3>A little bit <span class="text-primary">about myself</span></h3>
                         <p class="lead">I am a software developer with impeccable skills in web design and programming</p>
                         <p class="lead">Besides software development, I have a bachelors degree in business development. i am an excellent problem solver, and excell in almost every project thet I undertake!</p>
-                    </div>
+                        </div>
                     <div class="about-image">
-                        <img src="img/me.jpg" alt="my picture"
+                        <img src="img/me.jpg" alt="my picture">
+                    </div>
+                    </div>
+                </div>
+            </section>
+            <!--Section: Qualifications-->
+            <section id="services" class="bg-light">
+                <div class="container">
+                    <h2>Here is what <span class="text-primary"> I have achieved</span></h2>
+                    <div class="boxes">
+                        <div class="box">
+                            <h3><span class="text-primary">Fabulous website design</span></span></h3>
+                            <div class="feature">
+                                <i class="fas fa-check"></i> Search engine optimization
+                                <div class="feature">
+                                    <i class="fas fa-check"></i> Responsive website design
+                                    <div class="feature">
+                                        <i class="fas fa-check"></i> browser compatibility
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--Section: Contact-->
+            <section id="contact" class="bg-light">
+                <div class="container">
+                    <h2>Get your <span class="text-primary">owesome website</span></h2>
+                    <div class="form-container">
+                        <div class="mail-icon"><1 class="fas fa-envelope"></1></div>
+                        <div class="form-box">
+                            <h3>Send me a <span class="text-primary">message</span></h3>
+                            <form>
+                                <div class="form-group">
+                                    <label for="first-name">First</label>
+                                    <input type="text"placeholder="enter your first name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="last-name">Last</label>
+                                    <input type="text"placeholder="enter your last name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">Email</label>
+                                    <input type="email"placeholder="enter your email">
+                                </div>
+                                <div class="form-group">
+                                    <label for="message">message</label>
+                                    <textarea rows="7"placeholder="enter your first name"></textarea>
+                                    <input type="submit" value="send message" class="contact-btn">
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </section>
