--- a/index.html
+++ b/index.html
@@ -97,5 +97,12 @@
                 </div>
             </section>
         <script src="" async defer></script>
+        <!--JQuery CDN-->
+        <script
+  src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+  crossorigin="anonymous"></script>
+        <!--Local JS File-->
+        <script src="js/main.js"></script>
     </body>
 </html>
