added more styling to the page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Portfolio</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body id="home">
@@ -26,7 +25,7 @@
             <header id="showcase">
                 <div class="showcase-content">
                     <div class="container">
-                        <H1>Take your business website to the <br> <span class="text-primary">next level</span></H1>
+                        <h1>Take your business website to the <br> <span class="text-primary">next level</span></H1>
                         <a href="about" class="btn">FIND OUT HOW</a>
                     </div>
                 </div>
@@ -40,10 +39,9 @@
                         <h3>A little bit <span class="text-primary">about myself</span></h3>
                         <p class="lead">I am a software developer with impeccable skills in web design and programming</p>
                         <p class="lead">Besides software development, I have a bachelors degree in business development. i am an excellent problem solver, and excell in almost every project thet I undertake!</p>
-                        </div>
+                    </div>
                     <div class="about-image">
                         <img src="img/me.jpg" alt="my picture">
-                    </div>
                     </div>
                 </div>
             </section>
@@ -64,6 +62,7 @@
                         </div>
                     </div>
                 </div>
+                <p>Here is a link to my <a href="https://github.com/ayzaqwash/resume.git">resume</a>.</p>
             </section>
             <!--Section: Contact-->
             <section id="contact" class="bg-light">
