--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body id="home">
+    <div class="scroll">
         <!--navbar-->
         <h1>ISAAC WACHIRA</h1>
         <p>Software developer</p>
@@ -95,6 +96,7 @@
                     </div>
                 </div>
             </section>
+    </div>
         <script src="" async defer></script>
         <!--JQuery CDN-->
         <script
