--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
                         <h3>A little bit <span class="text-primary">about myself</span></h3>
                         <p class="lead">I am a software developer with impeccable skills in web design and programming</p>
                         <p class="lead">Besides software development, I have a bachelors degree in business development. i am an excellent problem solver, and excell in almost every project thet I undertake!</p>
+                        <h2>My hobbies</h2>
+                        <ol>
+                            <li>Watching and playing football</li>
+                            <li>Writing scripts</li>
+                            <li>Reading</li>
+                            <li>Playing virtual games</li>
+                        </ol>
                     </div>
                     <div class="about-image">
                         <img src="img/me.jpg" alt="my picture">
