changed some styling

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Portfolio</title>
-        <meta name="description" content="">
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body id="home">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Portfolio</title>
+    <meta name="description" content="">
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body id="home">
     <div class="scroll">
         <!--navbar-->
         <h1>ISAAC WACHIRA</h1>
@@ -21,25 +23,27 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#qualifications">Qualifications</a></li>
                 <li><a href="#contacts">Contacts</a></li>
-            </nav>
-            <!--showcase area-->
-            <header id="showcase">
-                <div class="showcase-content">
-                    <div class="container">
-                        <h1>Take your business website to the <br> <span class="text-primary">next level</span></H1>
-                        <a href="about" class="btn">FIND OUT HOW</a>
-                    </div>
-                </div>
-            </header>
-            <!--Section: About-->  
-            <section id="about">
+        </nav>
+        <!--showcase area-->
+        <header id="showcase">
+            <div class="showcase-content">
                 <div class="container">
-                    <h2 class="about-heading">Get to know <span class="text-primary">Me</span></h2>
-                    <div class="about-content">
-                        <div class="about text">
+                    <h1>Take your business website to the <br> <span class="text-primary">next level</span></H1>
+                    <a href="about" class="btn">FIND OUT HOW</a>
+                </div>
+            </div>
+        </header>
+        <!--Section: About-->
+        <section id="about">
+            <div class="container">
+                <h2 class="about-heading">Get to know <span class="text-primary">Me</span></h2>
+                <div class="about-content">
+                    <div class="about text">
                         <h3>A little bit <span class="text-primary">about myself</span></h3>
-                        <p class="lead">I am a software developer with impeccable skills in web design and programming</p>
-                        <p class="lead">Besides software development, I have a bachelors degree in business development. i am an excellent problem solver, and excell in almost every project thet I undertake!</p>
+                        <p class="lead">I am a software developer with impeccable skills in web design and programming
+                        </p>
+                        <p class="lead">Besides software development, I have a bachelors degree in business development.
+                            i am an excellent problem solver, and excell in almost every project thet I undertake!</p>
                         <h2>My hobbies</h2>
                         <ol>
                             <li>Watching and playing football</li>
@@ -52,65 +56,66 @@
                         <img src="img/me.jpg" alt="my picture">
                     </div>
                 </div>
-            </section>
-            <!--Section: Qualifications-->
-            <section id="services" class="bg-light">
-                <div class="container">
-                    <h2>Here is what <span class="text-primary"> I have achieved</span></h2>
-                    <div class="boxes">
-                        <div class="box">
-                            <h3><span class="text-primary">Fabulous website design</span></span></h3>
+        </section>
+        <!--Section: Qualifications-->
+        <section id="services" class="bg-light">
+            <div class="container">
+                <h2>Here is what <span class="text-primary"> I have achieved</span></h2>
+                <div class="boxes">
+                    <div class="box">
+                        <h3><span class="text-primary">Fabulous website design</span></span></h3>
+                        <div class="feature">
+                            <i class="fas fa-check"></i> Search engine optimization
                             <div class="feature">
-                                <i class="fas fa-check"></i> Search engine optimization
+                                <i class="fas fa-check"></i> Responsive website design
                                 <div class="feature">
-                                    <i class="fas fa-check"></i> Responsive website design
-                                    <div class="feature">
-                                        <i class="fas fa-check"></i> browser compatibility
+                                    <i class="fas fa-check"></i> browser compatibility
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <p>Here is a link to my <a href="https://github.com/ayzaqwash/resume.git">resume</a>.</p>
-            </section>
-            <!--Section: Contact-->
-            <section id="contact" class="bg-light">
-                <div class="container">
-                    <h2>Get your <span class="text-primary">owesome website</span></h2>
-                    <div class="form-container">
-                        <div class="mail-icon"><1 class="fas fa-envelope"></1></div>
-                        <div class="form-box">
-                            <h3>Send me a <span class="text-primary">message</span></h3>
-                            <form>
-                                <div class="form-group">
-                                    <label for="first-name">First</label>
-                                    <input type="text"placeholder="enter your first name">
-                                </div>
-                                <div class="form-group">
-                                    <label for="last-name">Last</label>
-                                    <input type="text"placeholder="enter your last name">
-                                </div>
-                                <div class="form-group">
-                                    <label for="email">Email</label>
-                                    <input type="email"placeholder="enter your email">
-                                </div>
-                                <div class="form-group">
-                                    <label for="message">message</label>
-                                    <textarea rows="7"placeholder="enter your first name"></textarea>
-                                    <input type="submit" value="send message" class="contact-btn">
-                                </div>
-                            </form>
-                        </div>
+                    <p>Here is a link to my <a href="https://github.com/ayzaqwash/resume.git">resume</a>.</p>
+        </section>
+        <!--Section: Contact-->
+        <section id="contact" class="bg-light">
+            <div class="container">
+                <h2>Get your <span class="text-primary">owesome website</span></h2>
+                <div class="form-container">
+                    <div class="mail-icon">
+                        <1 class="fas fa-envelope"></1>
+                    </div>
+                    <div class="form-box">
+                        <h3>Send me a <span class="text-primary">message</span></h3>
+                        <form>
+                            <div class="form-group">
+                                <label for="first-name">First</label>
+                                <input type="text" placeholder="enter your first name">
+                            </div>
+                            <div class="form-group">
+                                <label for="last-name">Last</label>
+                                <input type="text" placeholder="enter your last name">
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" placeholder="enter your email">
+                            </div>
+                            <div class="form-group">
+                                <label for="message">message</label>
+                                <textarea rows="7" placeholder="enter your first name"></textarea>
+                                <input type="submit" value="send message" class="contact-btn">
+                            </div>
+                        </form>
                     </div>
                 </div>
-            </section>
+            </div>
+        </section>
     </div>
-        <script src="" async defer></script>
-        <!--JQuery CDN-->
-        <script
-  src="https://code.jquery.com/jquery-3.6.0.min.js"
-  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-  crossorigin="anonymous"></script>
-        <!--Local JS File-->
-        <script src="js/main.js"></script>
-    </body>
+    <script src="" async defer></script>
+    <!--JQuery CDN-->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!--Local JS File-->
+    <script src="js/main.js"></script>
+</body>
+
 </html>
